@@ -1,5 +1,5 @@
 /*
- * Copyright © 2016 Cask Data, Inc.
+ * Copyright © 2016-2018 Cask Data, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -73,7 +73,7 @@ public final class DataStreamsConfig extends ETLConfig {
   }
 
   public String getExtraJavaOpts() {
-    return extraJavaOpts == null || extraJavaOpts.isEmpty() ? "-XX:MaxPermSize=256m" : extraJavaOpts;
+    return extraJavaOpts == null ? "" : extraJavaOpts;
   }
 
   public Boolean getStopGracefully() {
